append progress by task TodoApp

--- a/TodoApp/views/todo.ejs
+++ b/TodoApp/views/todo.ejs
@@ -13,7 +13,10 @@ integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7
 <form action="/" method="POST" class="todo-header">
 <input type="text" name="content">
 <button type="submit"><span class="fas fa-plus"></span></button>
-</form><ul class="todo-list"><li class="todo-list-item"><div class="todo-list-item-name">Some Text</div><a href="" class="edit"><span class="fas fa-edit"></span></a><a href="" class="remove">
+</form><ul class="todo-list"><li class="todo-list-item"><div class="todo-list-item-name">Some Text</div>
+    <a href="" class="edit">
+    <span class="fas fa-edit"></span></a><a href="" class="remove">
 <span class="fas fa-times"></span>
 </a>
-</li></ul></div></div></body>
+</li></ul>
+</div></div></body>
